--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.2",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongoose": "^8.18.0",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.10"
+    "multer": "^2.0.2",
+    "nodemon": "^3.1.10",
+    "streamifier": "^0.1.1"
   }
 }
