--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^1.37.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -18,7 +18,7 @@
     "mongoose": "^8.18.0",
     "morgan": "~1.9.1",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.10",
-    "streamifier": "^0.1.1"
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.1.10"
   }
 }
