--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cloudinary": "^1.37.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
