--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "morgan": "~1.9.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "slugify": "^1.6.6"
   }
